xfsprogs-3.1.9 (31 October 2012)
	- Print nice details if agsize is out of bounds in mkfs.xfs.
	- Various fixes for fragmented multi-block dir2 handling in
	  xfs_repair.
	- Fix extent record printing in xfs_db on big endian arches.
	- Use the correct macros when dumping block maps in extent
	  form in xfs_db, thanks to Peter Watkins.
	- Add sync file range support to xfs_io.
	- Implement preadv/pwritev in xfs_io.
	- Link against libreadline for libxcmd, thanks to Mike Frysinger.
	- Clean up mkfs.xfs output on invalid inode size.
	- Various build fixes, thanks to Mike Frysinger and Jan Engelhardt.

xfsprogs-3.1.8 (20 March 2012)
	- Fix xfs_repair segfault on a corrupted filesystem by validating the
	  acl count before reading it.
	- Avoid xfs_repair deadlocks on prefetched buffers.
	- Fix various incorrect printf formats, thanks to Jakub Bogusz for
	  reporting.
	- Polish translation update, thanks to Jakub Bogusz.
	- Refuse mkfs.xfs on misaligned devices when using 4k sectors, unless
	  the -f option is specified, and then force 512b sector size,
	  thanks to Carlos Maiolino.
	- Avoid a possible loop on the unlinked inode list in phase 3 of
	  xfs_repair, thanks to Stefan Pfetzing for reporting.
	- Allocate inode and free extent records individually in xfs_repair.
	- Fix a possible deadlock btree nodes in xfs_repair by using recursive
	  locking, thanks to Arkadiusz Miśkiewicz for reporting and testing.
	- Fix possible xfs_repair deadlocks in inode prefetching, thanks to
	  Arkadiusz Miśkiewicz for reporting and testing.
	- Make xfs_repair handle filesystems with the log in ag 0, thanks to
	  Sindre Skogen for reporting.
	- Deprecate the -F foreign flag to xfs_io.
	- Add debian linux-libc-dev build dependancy.
	- Add an extended fiemap configure check.
	- Various cleanups in xfs_repair.
	- Update xfs_check man page to recommend xfs_repair over xfs_check,
	  thanks to Arkadiusz Miśkiewicz.
	- Update the on-disk extent count as part of inode repair when moving