@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=3
 PKG_MINOR=1
-PKG_REVISION=9
+PKG_REVISION=10
 PKG_BUILD=1
